--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Mehdi H",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.13.2",
     "express": "^4.13.1",
     "mongoose": "^4.0.7",
