--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.13.1",
     "jsonwebtoken": "^5.0.2",
     "mongoose": "^4.0.7",
-    "morgan": "^1.6.1"
+    "morgan": "^1.6.1",
+    "socket.io": "^1.3.6"
   }
 }
